fix(matchcard): teamB nom tronqué à droite avec '...' + drapeau toujours visible

--- a/src/components/calendrier/MatchCard.module.css
+++ b/src/components/calendrier/MatchCard.module.css
@@ -89,9 +89,8 @@
 }
 
 .teamWrap.right {
-  text-align: right;
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
 
 .footer {
